# umhackathon

./: .gitignore  README.md  app.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  test.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/dashboard/staff/: page.tsx
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  enums.py
backend/app/db/: duckdb_client.py  postgres_audit.py
backend/app/graph/: builder.py  llm.py  nodes.py  prompts.py
backend/app/models/: budget.py  contractor.py  incident.py  state.py  vision_output.py
backend/app/services/: event_broker.py  vision_service.py  workflow_service.py
backend/app/tools/: budget_tools.py  contractor_tools.py
backend/gridguard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: map-pin.tsx
components/dashboard/: staff-budget-dashboard.tsx
components/layout/: top-nav.tsx
components/maps/: incident-map-picker.tsx
components/report/: upload-issue-form.tsx
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.json  vite.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: BudgetBoard.tsx  DecisionTrace.tsx  IncidentFeed.tsx  IncidentForm.tsx  StatusBadge.tsx
lib/: ai-triage.ts  report-store.ts
