[project]
name = "gridguard-backend"
version = "0.1.0"
description = "GridGuard agentic municipal hazard resolver backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "langgraph>=0.3.0",
  "langgraph-checkpoint-redis>=0.0.5",
  "langchain-openai>=0.2.0",
  "duckdb>=1.1.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "redis>=5.1.0",
  "python-dotenv>=1.0.1",
  "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
